Changelog for Miosix np embedded OS

v1.56
- Added the miosix/config/alt-configs directory to store some interesting
  alternative possible configurations.
- Malloc always allocates 4KB sectors that are aligned to 4KB boundaries.
  The linker script on the stm32 architecture has been modified so that the
  main stack (the one used for interrupt handling) is at the beginning of ram
  and not at the end. This will allow malloc to allocate till the ram upper
  limit and not waste the last 4KB block. Unfortunately it's not possible to
  do the same on the lpc2000 because upper 32bytes of ram are used for
  programming the flash memory.
- Changed default value for WITH_STDIN_BUFFER. By default stdin is now buffered.
- As part of a cleanup of linker scripts, some symbols such as _stack_top
  on the stm32 port have been removed.
- Removed filling of stack with a watermark value at boot, on both stm32 and
  lpc2000 architectures, to speed up boot process and for compatibility with
  ongoing linker script optimizations.

v1.55
- Used fixed point arithmethic for internal I regulators instead of simply
  integer arithmethic. This allows the regulator to really reache the set point.
- I+PI scheduler implemented, passes testsuite on both targets.
- Fixed the same bug of AuxiliaryTimer::IRQsetValue(), but in the LPC2000 target
- Fixed AuxiliaryTimer spurious interrupt generation for STM32 if IRQsetValue()
  is called from the SVC interrupt.
- Added ControlScheduler class, started implementing I+PI scheduler.
- Fixed inter dependencies of header files after separation of scheduler from
  kernel
- Added SchedulerData class that collects all data about a thread required by
  a scheduling algorithm. Each Thread instance has a ThreadData instance.
- Thread::getStackBottom() and Thread::getStackSize() are now public,
  so that MemoryProfiling is no longer frien of Thread.
- Added PriorityScheduler class and started moving the hardcoded priority